--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>MangaDex</title>
   </head>
-  <body>
+  <body class="bg-gray-100 text-gray-600 dark:bg-gray-800 dark:text-gray-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
